--- a/Tudo/style.css
+++ b/Tudo/style.css
@@ -22,6 +22,16 @@ body {
     padding: 20px;
     text-align: center;
 }
+.cart2 {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 1000px;
+    height: 400px !important;
+    margin: 20px auto;
+    padding: 20px;
+    text-align: center;
+}
 
 .my-foto{
     width: 150px;
