--- a/Tudo/style.css
+++ b/Tudo/style.css
@@ -26,7 +26,7 @@ body {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 1000px;
+    width: 1295px !important;
     height: 400px !important;
     margin: 20px auto;
     padding: 20px;
